--- a/extension-manifest-v3/src/_locales/pt_BR/messages.json
+++ b/extension-manifest-v3/src/_locales/pt_BR/messages.json
@@ -35,8 +35,13 @@
   "add_website_exception": {
     "message": "Adicionar exceção de site"
   },
-  "adjusted": {
-    "message": "ajustado"
+  "adjusted___tracker": {
+    "message": "ajustado",
+    "description": "Singular form - tracker has been adjusted"
+  },
+  "adjusted___tracker_list": {
+    "message": "Ajustado",
+    "description": "Plural form - list of adjusted trackers"
   },
   "adult_advertising": {
     "message": "Anúncios adultos",
@@ -74,8 +79,8 @@
   "become_a_contributor": {
     "message": "Seja um colaborador"
   },
-  "block_all__recommend_": {
-    "message": "Bloquear tudo (recomendado)"
+  "block_all__recommended_": {
+    "message": "Block all (recommended)"
   },
   "block_on_this_website": {
     "message": "Bloquear neste site"
@@ -336,12 +341,6 @@
   "load_more": {
     "message": "Carregar mais"
   },
-  "manifest_name": {
-    "message": "Ghostery Tracker & Ad Blocker - Privacidade AdBlock"
-  },
-  "manifest_short_description": {
-    "message": "O Ghostery é uma poderosa extensão de privacidade. Bloqueie anúncios, interrompa rastreadores e acelere sites."
-  },
   "menu": {
     "message": "Menu"
   },
@@ -545,8 +544,8 @@
   "trackers_wheel": {
     "message": "Roda de rastreadores"
   },
-  "trust_all__recommend_": {
-    "message": "Trust all (recommend)"
+  "trust_all__recommended_": {
+    "message": "Trust all (recommended)"
   },
   "trust_on_this_website": {
     "message": "Confiar nesse site"
