--- a/extension-manifest-v3/src/_locales/it/messages.json
+++ b/extension-manifest-v3/src/_locales/it/messages.json
@@ -213,7 +213,7 @@
     "message": "Attivato"
   },
   "enter_website_url": {
-    "message": "Enter website URL"
+    "message": "Inserire l'URL del sito web"
   },
   "essential": {
     "message": "Essenziali",
@@ -479,7 +479,7 @@
     "message": "Protezione dal reindirizzamento dei motori di ricerca"
   },
   "search_for_a_tracker_or_organization___": {
-    "message": "Search for a tracker or organization..."
+    "message": "Cerca un sito Tracker o un'organizzazione..."
   },
   "search_website___": {
     "message": "Ricerca sito web..."
