--- a/extension-manifest-v3/src/_locales/ru/messages.json
+++ b/extension-manifest-v3/src/_locales/ru/messages.json
@@ -479,7 +479,7 @@
     "message": "Защита от перенаправления поисковых систем"
   },
   "search_for_a_tracker_or_organization___": {
-    "message": "Search for a tracker or organization..."
+    "message": "Ищи Трекер или организацию..."
   },
   "search_website___": {
     "message": "Поиск сайта..."
