--- a/extension-manifest-v3/src/_locales/pl/messages.json
+++ b/extension-manifest-v3/src/_locales/pl/messages.json
@@ -557,7 +557,7 @@
     "message": "Wykres kołowy z trackerami"
   },
   "trust_all__recommended_": {
-    "message": "Zaufaj wszystkie (zalecane)"
+    "message": "Zaufaj wszystkim (zalecane)"
   },
   "trust_on_this_website": {
     "message": "Zaufaj na tej stronie"
